fixtures/invalid/public-symbol-growth/src/core/public.ts
export const firstValue = 1;
export const secondValue = 2;
